# suto

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  index.md
.github/workflows/: Build_and_run_tests.yaml  build_and_run_tests.yaml  build_and_run_tests_main.yaml  release.yml
Development/: logger.h
Development/Hello/: CMakeLists.txt  main.cpp
Development/Hello/tests/: main.cpp  test_version.cpp
Development/IpFilter/: CMakeLists.txt
Development/IpFilter/inc/: ip_filter.h
Development/IpFilter/src/: ip_filter.cpp  main.cpp
Development/IpFilter/tests/: ip_filter_tests.cpp  ip_pool.h
Development/TypeDeduction/: CMakeLists.txt
Development/TypeDeduction/inc/: logger.h  template_functions.h
Development/TypeDeduction/src/: main.cpp  template_type.cpp
Development/tests/: test_version.cpp
